[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Graphics/Backgrounds/cityscape.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Graphics/Backgrounds/Beat_the_crap.png" type="Texture" id=4]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="cityscape" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Beat_the_crap" type="Sprite" parent="."]
visible = false
position = Vector2( 202.96, 79.4862 )
texture = ExtResource( 4 )

[node name="Buttons" type="Node" parent="."]

[node name="Previous" type="Button" parent="Buttons"]
margin_left = 34.626
margin_top = 174.493
margin_right = 121.626
margin_bottom = 194.493
text = "<< Previous"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Buttons"]
margin_left = 129.609
margin_top = 174.493
margin_right = 192.609
margin_bottom = 194.493
text = "Play >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop" type="Button" parent="Buttons"]
margin_left = 129.609
margin_top = 174.493
margin_right = 192.609
margin_bottom = 194.493
text = "Play >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Buttons"]
margin_left = 129.609
margin_top = 174.755
margin_right = 192.609
margin_bottom = 194.755
text = "Play >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="Buttons"]
margin_left = 201.52
margin_top = 173.594
margin_right = 267.52
margin_bottom = 193.594
text = "Pause l l"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="Buttons"]
margin_left = 274.331
margin_top = 174.493
margin_right = 337.331
margin_bottom = 194.493
text = "Next >>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 19.0
margin_top = 32.0
margin_right = 117.0
margin_bottom = 46.0
text = "Title :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="Label" parent="."]
margin_left = 17.8015
margin_top = 58.3675
margin_right = 115.801
margin_bottom = 72.3675
text = "State :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
margin_left = 142.718
margin_top = 130.581
margin_right = 336.718
margin_bottom = 173.581
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Stop" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Restart" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Buttons/Next" to="." method="_on_Next_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
